crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__function__body_must_be_block.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/function/body_must_be_block.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: at `123`: expected LBrace
   ╭─[craftinginterpreters/test/function/body_must_be_block.lox:3:9]
   │
 3 │ fun f() 123;
   │         ───  
───╯
