crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__function__missing_comma_in_parameters.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/function/missing_comma_in_parameters.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
[line 3] Error at 'c': Expect RParen.
