crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__function__mutual_recursion.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/function/mutual_recursion.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
[line 2] Error at 'return': Expect expression.
