crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__function__nested_call_with_arguments.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/function/nested_call_with_arguments.lox
---
success: true
exit_code: 0
----- stdout -----
hello world

----- stderr -----
