crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__function__print.lox.snap
---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/function/print.lox
---
success: true
exit_code: 0
----- stdout -----
<function foo at [POINTER]>
<native fn>

----- stderr -----
